2005-09-13  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/sun_map.c (sun_entry2amd): isspace takes an int, not a char.

	* configure.in: keep a dummy unused AM_PROG_LEX, because old
	Automake (1.6.3) looks for it if you refer to LEX in your
	Makefile.am files.  Silly thing, fixed in newer versions of
	Automake (1.9.2).

2005-09-11  Erez Zadok  <ezk@cs.sunysb.edu>

	* Makefile.am (EXTRA_DIST_M4): add prog_{lex,yacc}.m4 to distro.

	* configure.in: use new macros AMU_PROG_YACC and AMU_PROG_LEX.

	* m4/macros/prog_yacc.m4: new macro to check if bison/yacc/byacc
	exist, but exist with an error if none found.

	* m4/macros/prog_lex.m4: new macro to check if f/lex exist, but
	exit with an error if not found (am-utils requires f/lex).

2005-09-07  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port: powerpc-apple-darwin8.2.0.

	* m4/macros/type_auth_create_gidlist.m4: Old macosx used "gid_t"
	but all newer ones (10.4+) use int.

	* m4/macros/type_recvfrom_fromlen.m4: Old macosx used "int" for
	6th arg of recvfrom(), but all newer ones (10.4+) use socklen_t.

	* minor new port: i386-pc-linux-deb3.1.

2005-09-02  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/mount/mount_linux.c: If autoconf didn't find any disk-based
	file system on this system (probably because /proc isn't mounted),
	then provide some default definition for this file to compile.

2005-08-28  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/sun_map.c (sun_entry2amd) : Wipe out any trailing white
	spaces or '\n' before passing strings to the parser.

	* amd/amd.h : oops, reverting bad changes

	* amd/info_file.c : oops, reverting bad changes

	* amd/mapc.c : oops, reverting bad changes

	* amd/sun_map_parse.y : oops, reverting bad changes

2005-08-27  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/xutil.c: amd_program_number is a u_long now.
	(unregister_amq): if pmap_unset failed to de-register Amd from the
	portmapper, print an error message.
	(get_amd_program_number): returns a u_long now.