@@ -139,7 +139,7 @@ strsplit(char *s, int ch, int qc)
     /*
      * skip to split char
      */
-    while (*s && (ch == ' ' ? (isascii(*s) && isspace((int)*s)) : *s == ch))
+    while (*s && (ch == ' ' ? (isascii(*s) && isspace((unsigned char)*s)) : *s == ch))
       *s++ = '\0';
 
     /*
@@ -156,7 +156,7 @@ strsplit(char *s, int ch, int qc)
     /*
      * skip to split char
      */
-    while (*s && !(ch == ' ' ? (isascii(*s) && isspace((int)*s)) : *s == ch)) {
+    while (*s && !(ch == ' ' ? (isascii(*s) && isspace((unsigned char)*s)) : *s == ch)) {
       if (*s++ == qc) {
 	/*
 	 * Skip past string.
