@@ -1,5 +1,12 @@
 2005-09-13  Erez Zadok  <ezk@cs.sunysb.edu>
 
+	* mk-amd-map/mk-amd-map.c (read_file_file), libamu/util.c
+	(strsplit), libamu/hasmntopt.c (nextmntopt), amd/sun_map.c
+	(sun_entry2amd), amd/sun2amd.c (sun2amd_convert_convert),
+	amd/mapc.c (mapc_add_kv), amd/info_file.c (file_search_or_reload),
+	amd/info_exec.c (exec_parse_qanswer): cast isspace() arg to
+	unsigned char, which is safer as per Christos.
+
 	* amd/sun_map.c (sun_entry2amd): isspace takes an int, not a char.
 
 	* configure.in: keep a dummy unused AM_PROG_LEX, because old
